--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>ד״ר בנימין ריינשטיין | רופא שיניים בירושלים | השתלות שיניים ועזרה ראשונה</title>
-<meta name="description" content="מרפאת שיניים מתקדמת בירושלים בניהול ד״ר בנימין ריינשטיין. מומחיות בהשתלות, אסתטיקה, שיקום הפה וטיפולי חירום דנטליים 24/6.">
+<title>ד״ר בנימין ריינשטיין | מרפאת שיניים בירושלים | עזרה ראשונה והשתלות</title>
+<meta name="description" content="זקוקים לרופא שיניים בירושלים? ד״ר בנימין ריינשטיין מציע טיפולי שיניים מתקדמים, השתלות וטיפולי חירום דנטליים בשעות הערב ובסופי שבוע באווירה רגועה ומקצועית.">
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Dentist",
-  "name": "Dr. Benjamin Reinstein",
+  "name": "Dr. Benjamin Reinstein - ד״ר בנימין ריינשטיין",
   "address": {
     "@type": "PostalAddress",
     "streetAddress": "Shamai 14",
@@ -19,10 +19,20 @@
     "addressCountry": "IL"
   },
   "telephone": "+972-53-385-2030",
-  "url": "https://yourwebsite.com"
+  "url": "https://yourwebsite.com",
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Dental Services",
+    "itemListElement": [
+      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Emergency Dentistry" } },
+      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Dental Implants" } }
+    ]
+  }
 }
 </script>
 
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M30,20 Q50,10 70,20 Q85,30 80,50 Q75,85 50,90 Q25,85 20,50 Q15,30 30,20 Z%22 fill=%22none%22 stroke=%22%230056b3%22 stroke-width=%225%22/></svg>">
+ 
 <style>
 /* GLOBAL STYLES */
 html, body { margin: 0; padding: 0; overflow-x: hidden; scroll-behavior: smooth; }
@@ -37,7 +47,7 @@ li { margin-bottom: 12px; padding-inline-start: 5px; }
 .topbar { width: 100vw; background: white; border-bottom: 1px solid #ddd; padding: 12px 20px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box; direction: ltr !important; }
 .top-phone { color: var(--primary); text-decoration: none; font-weight: bold; font-size: 1.1rem; }
 .lang-btn { padding: 8px 18px; border-radius: 8px; border: 1px solid #ccc; cursor: pointer; background: white; font-weight: 600; }
-.lang-menu { display: none; position: absolute; left: 20px; background: white; border: 1px solid #ccc; border-radius: 8px; margin-top: 5px; z-index: 1000; }
+.lang-menu { display: none; position: absolute; left: 20px; background: white; border: 1px solid #ccc; border-radius: 8px; margin-top: 5px; z-index: 1000; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
 .lang-menu button { background: none; border: none; padding: 12px 20px; width: 100%; text-align: left; cursor: pointer; border-bottom: 1px solid #eee; }
 
 /* HERO SECTION */
@@ -45,21 +55,11 @@ header { width: 100vw; height: 350px; position: relative; overflow: hidden; }
 header video { width: 100%; height: 100%; object-fit: cover; }
 header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,0,0.45); }
 .header-content { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; z-index: 2; width: 90%; }
-.header-content h1 { margin: 0; font-size: 2.5rem; }
+.header-content h1 { margin: 0; font-size: 2.3rem; }
 
 /* NAVIGATION TABS (ENLARGED) */
 .tabs-nav { display: flex; justify-content: center; background: white; border-bottom: 2px solid #ddd; position: sticky; top: 0; z-index: 100; }
-.tab-link { 
-  padding: 20px 30px; /* Bigger padding */
-  cursor: pointer; 
-  border: none; 
-  background: none; 
-  font-size: 1.1rem; /* Bigger font */
-  font-weight: 700; 
-  color: #555; 
-  transition: 0.3s; 
-  border-bottom: 4px solid transparent; 
-}
+.tab-link { padding: 20px 25px; cursor: pointer; border: none; background: none; font-size: 1.1rem; font-weight: 700; color: #666; transition: 0.3s; border-bottom: 4px solid transparent; }
 .tab-link.active { color: var(--primary); border-bottom: 4px solid var(--primary); }
 
 /* MAIN CONTAINER */
@@ -69,24 +69,8 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
 /* GRID SYSTEM (CENTERED LAST ROW) */
-.grid-list { 
-  display: flex; 
-  flex-wrap: wrap; 
-  justify-content: center; /* This centers the "leftover" boxes */
-  gap: 20px; 
-  margin-top: 30px; 
-}
-.box { 
-  background: white; 
-  padding: 25px; 
-  border-radius: var(--radius); 
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05); 
-  text-align: center; 
-  flex: 1 1 280px; /* Allows boxes to grow and wrap */
-  max-width: 320px; /* Keeps them from getting too wide on desktop */
-  transition: 0.2s; 
-  border: 1px solid transparent; 
-}
+.grid-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
+.box { background: white; padding: 25px; border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.05); text-align: center; flex: 1 1 280px; max-width: 320px; transition: 0.2s; border: 1px solid transparent; }
 .box:hover { border-color: var(--primary); transform: translateY(-3px); }
 .box h3 { margin-top: 0; color: var(--primary); font-size: 1.25rem; }
 
@@ -119,8 +103,8 @@ body.rtl { direction: rtl; }
 <header>
   <video autoplay muted loop playsinline><source src="video.mp4" type="video/mp4"></video>
   <div class="header-content">
-    <h1 id="title">ד״ר בנימין ריינשטיין</h1>
-    <p class="subtitle" id="subtitle">מרפאת שיניים בירושלים</p>
+    <h1 id="title"></h1>
+    <p class="subtitle" id="subtitle"></p>
   </div>
 </header>
 
@@ -131,9 +115,25 @@ body.rtl { direction: rtl; }
 </nav>
 
 <main class="container">
-  <section id="about-tab" class="tab-content active"><div id="about-content"></div></section>
-  <section id="services-tab" class="tab-content"><div id="services-content"></div></section>
-  <section id="emergencies-tab" class="tab-content"><div id="emergencies-content"></div></section>
+  <section id="about-tab" class="tab-content active">
+    <h2 id="about-clinic-title"></h2>
+    <div id="about-clinic-text"></div>
+    <div class="contact-section"></div>
+  </section>
+
+  <section id="services-tab" class="tab-content">
+    <h2 id="services-main-title"></h2>
+    <p id="services-main-intro"></p>
+    <div id="services-main-list" class="grid-list"></div>
+    <div class="contact-section"></div>
+  </section>
+
+  <section id="emergencies-tab" class="tab-content">
+    <h2 id="emergency-intro-title"></h2>
+    <p id="emergency-intro-text"></p>
+    <div id="emergency-services-list" class="grid-list"></div>
+    <div class="contact-section"></div>
+  </section>
 </main>
 
 <footer style="background:#111;color:white;text-align:center;padding:25px; margin-top: 40px;">
@@ -145,7 +145,7 @@ body.rtl { direction: rtl; }
 </a>
 
 <script>
-const MAP_URL = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.879744155386!2d35.2137103!3d31.7738245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzHCsDQ2JzI1LjgiTiAzNcKwMTInNDkuNCJF!5e0!3m2!1sen!2sil!4v17000000000001";
+const MAP_URL = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.688753235453!2d35.21731637628929!3d31.781199974097464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d7da6f001f3f%3A0xa648a1d5300f2e0!2sShamai%20St%2014%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000!5m2!1sen!2sil";
 
 const content = {
   he: {
@@ -155,73 +155,79 @@ const content = {
     tabs: { about: "אודות", services: "שירותים", emergency: "עזרה ראשונה" },
     waMsg: "שלום, אשמח לקבוע תור בבקשה.",
     aboutTitle: "אודות המרפאה",
-    aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים... <br><br><b>אודות ד"ר ריינשטיין:</b><ul><li><b>ד"ר בנימין ריינשטיין</b> בוגר תואר DMD מהאוניברסיטה העברית והדסה עין-כרם.</li><li>השתלמויות בשיקום הפה ובכירורגיה במרכז הרפואי שיבא.</li></ul>`,
+    aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>אנו מתמחים בטיפולים משמרים, שיקומים, כירורגיה והשתלות בעזרת ציוד חדיש לשיפור חוויית הטיפול והאסתטיקה של החיוך שלך.<br><br><b>אודות ד"ר ריינשטיין:</b><ul><li><b>ד"ר בנימין ריינשטיין</b> בוגר תואר DMD מהפקולטה לרפואת שיניים של האוניברסיטה העברית והדסה עין-כרם.</li><li>השתלמויות בשיקום הפה, טיפולי שורש מורכבים ועקירות כירורגיות במרכז הרפואי שיבא.</li><li>חבר בעמותה הישראלית להשתלות דנטליות.</li><li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על ניהול מרפאות צבאיות.</li></ul>`,
     servicesIntro: "המרפאה שלנו מתמחה בטיפולים הבאים:",
     services: [
-      { t: "רפואת שיניים כללית", d: "בדיקות תקופתיות וטיפולים משמרים." },
-      { t: "אסתטיקה דנטלית", d: "הלבנת שיניים וציפויי חרסינה לחיוך מושלם." },
-      { t: "השתלות שיניים", d: "שחזור שיניים חסרות בטכנולוגיה המתקדמת ביותר." },
-      { t: "שיקום הפה", d: "כתרים ותותבות בהתאמה אישית." },
+      { t: "רפואת שיניים כללית", d: "בדיקות תקופתיות, ניקוי אבן וטיפולים משמרים." },
+      { t: "אסתטיקה דנטלית", d: "הלבנת שיניים, ציפויי חרסינה ושחזורים אסתטיים." },
+      { t: "השתלות שיניים", d: "שחזור שיניים חסרות באמצעות שתלים בשיטות מתקדמות." },
+      { t: "שיקום הפה", d: "כתרים, גשרים ותותבות המותאמים אישית." },
       { t: "טיפולי שורש", d: "טיפולים מדויקים להצלת שיניים פגועות." },
-      { t: "טיפולי חניכיים", d: "מניעה וטיפול במחלות חניכיים לשמירה על יציבות השיניים." }, // SWAPPED & UPDATED TEXT
-      { t: "רפואת שיניים לילדים", d: "טיפולים באווירה סבלנית המותאמים לילדים." } // SWAPPED
+      { t: "טיפולי חניכיים", d: "מניעה וטיפול במחלות חניכיים לשמירה על יציבות השיניים." },
+      { t: "רפואת שיניים לילדים", d: "טיפולים באווירה סבלנית ורגועה המותאמים לילדים." }
     ],
+    emergencyTitle: "עזרה ראשונה דנטלית",
+    emergencyIntro: "זקוקים לעזרה דחופה? אנו מספקים מענה מהיר לכאבים חריפים בשעות הערב ובסופי שבוע.",
     emergencyList: [
-      { t: "כאבי שיניים", d: "מענה מיידי לכאב חריף." },
-      { t: "שבר בשן", d: "טיפול חירום לאחר חבלה." },
-      { t: "נפיחות וזיהום", d: "טיפול בדלקות חריפות." },
-      { t: "דימומים", d: "עזרה ראשונה לפציעות בפה." }
+      { t: "כאבי שיניים", d: "טיפול מיידי להקלת כאב חד או פעימות בשן." },
+      { t: "שבר או נפילת שן", d: "טיפול חירום לאחר חבלה או נפילה." },
+      { t: "נפיחות וזיהום", d: "טיפול בזיהומים חריפים, דלקות ונפיחות." },
+      { t: "דימומים וחתכים", d: "עזרה ראשונה לפציעות ברקמות הרכות." }
     ],
     contact: "צור קשר", phone: "טלפון:", email: "אימייל:", location: "מיקום", footer: "© 2025 ד״ר בנימין ריינשטיין"
   },
   en: {
     direction: "ltr",
     title: "Dr. Benjamin Reinstein",
-    subtitle: "Dentist in Jerusalem",
+    subtitle: "Jerusalem Dental Clinic",
     tabs: { about: "About", services: "Services", emergency: "Emergency" },
     waMsg: "Hi, I would like to book an appointment.",
     aboutTitle: "About the Clinic",
-    aboutText: "Advanced dental care with a focus on patient comfort. Dr. Reinstein is a graduate of Hebrew University-Hadassah.",
+    aboutText: `At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere.<br><br><b>About Dr. Reinstein:</b><ul><li><b>Dr. Benjamin Reinstein</b> holds a DMD from the Hebrew University and Hadassah Ein Kerem.</li><li>Advanced training in oral rehabilitation and surgical extractions at Sheba Medical Center.</li><li>Member of the Israeli Association of Dental Implants.</li><li>Recipient of the IDF Medical Services Excellence Award.</li></ul>`,
     servicesIntro: "Our clinic specializes in the following treatments:",
     services: [
-      { t: "General Dentistry", d: "Routine check-ups and cleanings." },
-      { t: "Cosmetic Dentistry", d: "Whitening and veneers for a perfect smile." },
-      { t: "Dental Implants", d: "Modern implantology solutions." },
-      { t: "Restoration", d: "Custom crowns and bridges." },
-      { t: "Root Canal Therapy", d: "Precise endodontic care." },
-      { t: "Periodontal Care", d: "Treating gum disease for stability." }, // SWAPPED
-      { t: "Pediatric Dentistry", d: "Gentle dental care for children." } // SWAPPED
+      { t: "General Dentistry", d: "Routine check-ups, cleaning, and conservative treatments." },
+      { t: "Cosmetic Dentistry", d: "Teeth whitening and porcelain veneers." },
+      { t: "Dental Implants", d: "Restoring missing teeth using modern technology." },
+      { t: "Restoration", d: "Custom crowns, bridges, and dentures." },
+      { t: "Root Canal Therapy", d: "Precise treatments to save damaged teeth." },
+      { t: "Periodontal Care", d: "Preventing and treating gum disease." },
+      { t: "Pediatric Dentistry", d: "Gentle and specialized dental care for children." }
     ],
+    emergencyTitle: "Dental Emergency",
+    emergencyIntro: "Need urgent help? Rapid response for tooth pain during evenings and weekends.",
     emergencyList: [
-      { t: "Tooth Pain", d: "Immediate relief for severe pain." },
-      { t: "Broken Tooth", d: "Urgent care after trauma." },
-      { t: "Swelling", d: "Treatment for infections." },
-      { t: "Bleeding", d: "Care for oral injuries." }
+      { t: "Tooth Pain", d: "Immediate relief for sharp or persistent pain." },
+      { t: "Broken Tooth", d: "Emergency care for trauma or fractures." },
+      { t: "Swelling", d: "Treatment for acute infections and abscesses." },
+      { t: "Bleeding", d: "Urgent care for soft tissue injuries." }
     ],
     contact: "Contact Us", phone: "Phone:", email: "Email:", location: "Location", footer: "© 2025 Dr. Benjamin Reinstein"
   },
   fr: {
     direction: "ltr",
     title: "Dr. Benjamin Reinstein",
-    subtitle: "Dentiste à Jérusalem",
+    subtitle: "Clinique Dentaire Jérusalem",
     tabs: { about: "À Propos", services: "Services", emergency: "Urgences" },
     waMsg: "Bonjour, j'aimerais prendre rendez-vous.",
     aboutTitle: "À Propos",
-    aboutText: "Soins dentaires de haute qualité. Le Dr Reinstein est diplômé de l'Université hébraïque-Hadassah.",
+    aboutText: `Dans notre clinique, vous bénéficierez de soins dentaires de pointe.<br><br><b>À propos du Dr Reinstein :</b><ul><li><b>Le Dr Benjamin Reinstein</b> est diplômé DMD de l'Université hébraïque.</li><li>Formations spécialisées au centre médical Sheba.</li><li>Membre de l'Association israélienne des implants dentaires.</li><li>Lauréat du prix d'excellence des services médicaux de Tsahal.</li></ul>`,
     servicesIntro: "Notre clinique se spécialise dans les soins suivants :",
     services: [
-      { t: "Dentisterie Générale", d: "Examens et soins conservateurs." },
-      { t: "Esthétique Dentaire", d: "Blanchiment et facettes." },
+      { t: "Dentisterie Générale", d: "Examens de routine et soins conservateurs." },
+      { t: "Dentisterie Esthétique", d: "Blanchiment et facettes." },
       { t: "Implants Dentaires", d: "Remplacement de dents par implants." },
       { t: "Restauration", d: "Couronnes et bridges sur mesure." },
       { t: "Endodontie", d: "Traitements de racines précis." },
-      { t: "Parodontologie", d: "Soins des gencives." }, // SWAPPED
-      { t: "Dentisterie Pédiatrique", d: "Soins doux pour les enfants." } // SWAPPED
+      { t: "Parodontologie", d: "Soins des gencives." },
+      { t: "Dentisterie Pédiatrique", d: "Soins doux adaptés aux enfants." }
     ],
+    emergencyTitle: "Urgences Dentaires",
+    emergencyIntro: "Besoin d'aide ? Intervention rapide en soirée et le week-end.",
     emergencyList: [
-      { t: "Douleur Intense", d: "Soulagement immédiat." },
+      { t: "Douleur Intense", d: "Soulagement immédiat de la rage de dents." },
       { t: "Dent Cassée", d: "Restauration après un choc." },
-      { t: "Gonflement", d: "Traitement des infections." },
+      { t: "Gonflement", d: "Traitement des infections et abcès." },
       { t: "Saignements", d: "Soins des blessures buccales." }
     ],
     contact: "Contact", phone: "Tél:", email: "Email:", location: "Localisation", footer: "© 2025 Dr. Benjamin Reinstein"
@@ -233,6 +239,12 @@ function openTab(evt, tabId) {
   document.querySelectorAll(".tab-link").forEach(l => l.classList.remove("active"));
   document.getElementById(tabId).classList.add("active");
   evt.currentTarget.classList.add("active");
+  window.scrollTo(0, 300);
+}
+
+function toggleMenu() {
+  const m = document.getElementById("lang-menu");
+  m.style.display = (m.style.display === "block") ? "none" : "block";
 }
 
 function setLang(lang) {
@@ -243,9 +255,15 @@ function setLang(lang) {
   document.getElementById("nav-emergencies").innerText = c.tabs.emergency;
   document.getElementById("title").innerText = c.title;
   document.getElementById("subtitle").innerText = c.subtitle;
-  document.getElementById("footer-text").innerText = c.footer;
-  document.querySelector(".lang-btn").innerText = lang.toUpperCase() + " ▾";
-
+  document.getElementById("about-clinic-title").innerText = c.aboutTitle;
+  document.getElementById("about-clinic-text").innerHTML = c.aboutText;
+  document.getElementById("services-main-title").innerText = c.tabs.services;
+  document.getElementById("services-main-intro").innerText = c.servicesIntro;
+  document.getElementById("services-main-list").innerHTML = c.services.map(s => `<div class="box"><h3>${s.t}</h3><p>${s.d}</p></div>`).join("");
+  document.getElementById("emergency-intro-title").innerText = c.emergencyTitle;
+  document.getElementById("emergency-intro-text").innerText = c.emergencyIntro;
+  document.getElementById("emergency-services-list").innerHTML = c.emergencyList.map(s => `<div class="box"><h3>${s.t}</h3><p>${s.d}</p></div>`).join("");
+  
   const contactHTML = `
     <hr style="margin: 40px 0; border: 0; border-top: 1px solid #eee;">
     <h2>${c.contact}</h2>
@@ -253,17 +271,15 @@ function setLang(lang) {
     <p><strong>${c.email}</strong> BenjaminReinstein@gmail.com</p>
     <h2>${c.location}</h2>
     <iframe width="100%" height="350" style="border:0;border-radius:14px;" src="${MAP_URL}" loading="lazy"></iframe>`;
-
-  document.getElementById("about-content").innerHTML = `<h2>${c.aboutTitle}</h2><div>${c.aboutText}</div>` + contactHTML;
-  document.getElementById("services-content").innerHTML = `<h2>${c.tabs.services}</h2><p>${c.servicesIntro}</p><div class="grid-list">${c.services.map(s=>`<div class="box"><h3>${s.t}</h3><p>${s.d}</p></div>`).join("")}</div>` + contactHTML;
-  document.getElementById("emergencies-content").innerHTML = `<h2>${c.tabs.emergency}</h2><div class="grid-list">${c.emergencyList.map(s=>`<div class="box"><h3>${s.t}</h3><p>${s.d}</p></div>`).join("")}</div>` + contactHTML;
-
+  
+  document.querySelectorAll(".contact-section").forEach(sec => sec.innerHTML = contactHTML);
+  document.getElementById("footer-text").innerText = c.footer;
   document.getElementById("whatsapp-btn").href = `https://wa.me/972533852030?text=${encodeURIComponent(c.waMsg)}`;
+  document.querySelector(".lang-btn").innerText = (lang === "he" ? "HE" : lang === "fr" ? "FR" : "EN") + " ▾";
   document.getElementById("lang-menu").style.display = "none";
 }
 
-function toggleMenu() { const m = document.getElementById("lang-menu"); m.style.display = (m.style.display==="block")?"none":"block"; }
-document.addEventListener("click", e => { if(!e.target.closest(".lang-dropdown")) document.getElementById("lang-menu").style.display="none"; });
+document.addEventListener("click", e => { if (!e.target.closest(".lang-dropdown")) document.getElementById("lang-menu").style.display = "none"; });
 
 setLang("he");
 </script>
