--- a/index.html
+++ b/index.html
@@ -19,15 +19,7 @@
     "addressCountry": "IL"
   },
   "telephone": "+972-53-385-2030",
-  "url": "https://yourwebsite.com",
-  "hasOfferCatalog": {
-    "@type": "OfferCatalog",
-    "name": "Dental Services",
-    "itemListElement": [
-      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Emergency Dentistry" } },
-      { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Dental Implants" } }
-    ]
-  }
+  "url": "https://yourwebsite.com"
 }
 </script>
 
@@ -63,14 +55,31 @@ header::after { content: ""; position: absolute; inset: 0; background: rgba(0,0,
 .tab-link.active { color: var(--primary); border-bottom: 4px solid var(--primary); }
 
 /* MAIN CONTAINER */
-.container { max-width: 1000px; margin: auto; padding: 30px 20px; }
+.container { max-width: 1100px; margin: auto; padding: 30px 20px; }
 .tab-content { display: none; animation: fadeIn 0.4s ease; }
 .tab-content.active { display: block; }
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-/* GRID SYSTEM (CENTERED LAST ROW) */
-.grid-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
-.box { background: white; padding: 25px; border-radius: var(--radius); box-shadow: 0 4px 12px rgba(0,0,0,0.05); text-align: center; flex: 1 1 280px; max-width: 320px; transition: 0.2s; border: 1px solid transparent; }
+/* GRID SYSTEM (3-COLUMN FLEX WITH CENTERED LAST BOX) */
+.grid-list { 
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center; /* Centers the boxes in the row */
+  gap: 22px; 
+  margin-top: 30px; 
+}
+.box { 
+  background: white; 
+  padding: 25px; 
+  border-radius: var(--radius); 
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05); 
+  text-align: center; 
+  flex: 0 1 calc(33.333% - 22px); /* Attempts 3 columns */
+  min-width: 280px; /* Prevents them from getting too skinny */
+  transition: 0.2s; 
+  border: 1px solid transparent; 
+  box-sizing: border-box;
+}
 .box:hover { border-color: var(--primary); transform: translateY(-3px); }
 .box h3 { margin-top: 0; color: var(--primary); font-size: 1.25rem; }
 
@@ -79,9 +88,14 @@ body.rtl { direction: rtl; }
 .whatsapp-float { position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; z-index: 9999; }
 .whatsapp-float img { width: 100%; height: 100%; border-radius: 50%; box-shadow: 0 4px 12px rgba(0,0,0,0.3); }
 
+@media (max-width: 900px) {
+  .box { flex: 0 1 calc(50% - 22px); } /* 2 columns on medium screens */
+}
+
 @media (max-width: 600px) {
   .header-content h1 { font-size: 1.8rem; }
   .tab-link { padding: 15px 10px; font-size: 0.9rem; }
+  .box { flex: 1 1 100%; } /* 1 column on mobile */
 }
 </style>
 </head>
@@ -145,14 +159,14 @@ body.rtl { direction: rtl; }
 </a>
 
 <script>
-const MAP_URL = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3391.688753235453!2d35.21731637628929!3d31.781199974097464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d7da6f001f3f%3A0xa648a1d5300f2e0!2sShamai%20St%2014%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000!5m2!1sen!2sil";
+const MAP_URL = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.235650171638!2d35.2172159757657!3d31.78119107412762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d7d7455d3f27%3A0xc6c76891a97d195a!2sShamai%20St%2014%2C%20Jerusalem!5e0!3m2!1sen!2sil!4v1700000000000";
 
 const content = {
   he: {
     direction: "rtl",
     title: "ד״ר בנימין ריינשטיין",
     subtitle: "מרפאת שיניים בירושלים",
-    tabs: { about: "אודות", services: "שירותים", emergency: "עזרה ראשונה" },
+    tabs: { about: "אודות המרפאה", services: "שירותים", emergency: "עזרה ראשונה" },
     waMsg: "שלום, אשמח לקבוע תור בבקשה.",
     aboutTitle: "אודות המרפאה",
     aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>אנו מתמחים בטיפולים משמרים, שיקומים, כירורגיה והשתלות בעזרת ציוד חדיש לשיפור חוויית הטיפול והאסתטיקה של החיוך שלך.<br><br><b>אודות ד"ר ריינשטיין:</b><ul><li><b>ד"ר בנימין ריינשטיין</b> בוגר תואר DMD מהפקולטה לרפואת שיניים של האוניברסיטה העברית והדסה עין-כרם.</li><li>השתלמויות בשיקום הפה, טיפולי שורש מורכבים ועקירות כירורגיות במרכז הרפואי שיבא.</li><li>חבר בעמותה הישראלית להשתלות דנטליות.</li><li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על ניהול מרפאות צבאיות.</li></ul>`,
@@ -180,7 +194,7 @@ const content = {
     direction: "ltr",
     title: "Dr. Benjamin Reinstein",
     subtitle: "Jerusalem Dental Clinic",
-    tabs: { about: "About", services: "Services", emergency: "Emergency" },
+    tabs: { about: "About the Clinic", services: "Services", emergency: "Emergency" },
     waMsg: "Hi, I would like to book an appointment.",
     aboutTitle: "About the Clinic",
     aboutText: `At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere.<br><br><b>About Dr. Reinstein:</b><ul><li><b>Dr. Benjamin Reinstein</b> holds a DMD from the Hebrew University and Hadassah Ein Kerem.</li><li>Advanced training in oral rehabilitation and surgical extractions at Sheba Medical Center.</li><li>Member of the Israeli Association of Dental Implants.</li><li>Recipient of the IDF Medical Services Excellence Award.</li></ul>`,
@@ -194,13 +208,13 @@ const content = {
       { t: "Periodontal Care", d: "Preventing and treating gum disease." },
       { t: "Pediatric Dentistry", d: "Gentle and specialized dental care for children." }
     ],
-    emergencyTitle: "Dental Emergency",
-    emergencyIntro: "Need urgent help? Rapid response for tooth pain during evenings and weekends.",
+    emergencyTitle: "Emergency Services",
+    emergencyIntro: "Need urgent help? Tooth pain doesn't wait. Rapid response during evenings and weekends.",
     emergencyList: [
       { t: "Tooth Pain", d: "Immediate relief for sharp or persistent pain." },
       { t: "Broken Tooth", d: "Emergency care for trauma or fractures." },
       { t: "Swelling", d: "Treatment for acute infections and abscesses." },
-      { t: "Bleeding", d: "Urgent care for soft tissue injuries." }
+      { t: "Oral Bleeding", d: "Urgent care for soft tissue injuries." }
     ],
     contact: "Contact Us", phone: "Phone:", email: "Email:", location: "Location", footer: "© 2025 Dr. Benjamin Reinstein"
   },
@@ -208,7 +222,7 @@ const content = {
     direction: "ltr",
     title: "Dr. Benjamin Reinstein",
     subtitle: "Clinique Dentaire Jérusalem",
-    tabs: { about: "À Propos", services: "Services", emergency: "Urgences" },
+    tabs: { about: "À Propos de la Clinique", services: "Services", emergency: "Urgences" },
     waMsg: "Bonjour, j'aimerais prendre rendez-vous.",
     aboutTitle: "À Propos",
     aboutText: `Dans notre clinique, vous bénéficierez de soins dentaires de pointe.<br><br><b>À propos du Dr Reinstein :</b><ul><li><b>Le Dr Benjamin Reinstein</b> est diplômé DMD de l'Université hébraïque.</li><li>Formations spécialisées au centre médical Sheba.</li><li>Membre de l'Association israélienne des implants dentaires.</li><li>Lauréat du prix d'excellence des services médicaux de Tsahal.</li></ul>`,
@@ -222,7 +236,7 @@ const content = {
       { t: "Parodontologie", d: "Soins des gencives." },
       { t: "Dentisterie Pédiatrique", d: "Soins doux adaptés aux enfants." }
     ],
-    emergencyTitle: "Urgences Dentaires",
+    emergencyTitle: "Services d'urgence",
     emergencyIntro: "Besoin d'aide ? Intervention rapide en soirée et le week-end.",
     emergencyList: [
       { t: "Douleur Intense", d: "Soulagement immédiat de la rage de dents." },
