Fix aboutText for Dr. Rainshtain's profile

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ const content = {
     tabs: { about: "אודות המרפאה", services: "שירותים", emergency: "עזרה ראשונה" },
     waMsg: "שלום, אשמח לקבוע תור בבקשה.",
     aboutTitle: "אודות המרפאה",
-    aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>אנו מתמחים בטיפולים משמרים, שיקומים, כירורגיה והשתלות בעזרת ציוד חדיש לשיפור חוויית הטיפול והאסתטיקה של החיוך שלך.<br><br><b>אודות ד"ר ריינשטיין:</b><ul><li><b>ד"ר בנימין ריינשטיין</b> בוגר תואר DMD מהפקולטה לרפואת שיניים של האוניברסיטה העברית והדסה עין-כרם.</li><li>השתלמויות בשיקום הפה, טיפולי שורש מורכבים ועקירות כירורגיות במרכז הרפואי שיבא.</li><li>חבר בעמותה הישראלית להשתלות דנטליות.</li><li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על ניהול מרפאות צבאיות.</li></ul>`,
+    aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>אנו מתמחים בטיפולים משמרים, שיקומים, כירורגים והשתלות בעזרת ציוד חדיש לשיפור חוויית הטיפול והאסתטיקה של החיוך שלך.<br><br><b>אודות ד"ר בנימין ריינשטיין:</b><ul><li><b>ד"ר ריינשטיין</b> בוגר תואר DMD מהפקולטה לרפואת שיניים של <b>האוניברסיטה העברית והדסה עין-כרם</b>.</li><li>השתלמויות בשיקום הפה, טיפולי שורש מורכבים ועקירות כירורגיות במרכז הרפואי שיבא.</li><li>חבר בעמותה הישראלית להשתלות דנטליות.</li><li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על ניהול מרפאות צבאיות.</li></ul>`,
     servicesIntro: "המרפאה שלנו מתמחה בטיפולים הבאים:",
     services: [
       { t: "רפואת שיניים כללית", d: "בדיקות תקופתיות, ניקוי אבן וטיפולים משמרים." },
