Update aboutText for multiple languages

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ const content = {
     tabs: { about: "אודות המרפאה", services: "שירותים", emergency: "עזרה ראשונה" },
     waMsg: "שלום, אשמח לקבוע תור בבקשה.",
     aboutTitle: "אודות המרפאה",
-    aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>אנו מתמחים בטיפולים משמרים, שיקומים, כירורגים והשתלות בעזרת ציוד חדיש לשיפור חוויית הטיפול והאסתטיקה של החיוך שלך.<br><br><b>אודות ד"ר בנימין ריינשטיין:</b><ul><li><b>ד"ר ריינשטיין</b> בוגר תואר DMD מהפקולטה לרפואת שיניים של <b>האוניברסיטה העברית והדסה עין-כרם</b>.</li><li>השתלמויות בשיקום הפה, טיפולי שורש מורכבים ועקירות כירורגיות במרכז הרפואי שיבא.</li><li>חבר בעמותה הישראלית להשתלות דנטליות.</li><li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על ניהול מרפאות צבאיות.</li></ul>`,
+    aboutText: `במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>אנו מתמחים בטיפולים משמרים, שיקומים, כירורגים והשתלות בעזרת ציוד חדיש לשיפור חוויית הטיפול והאסתטיקה של החיוך שלך.<br><br><b>אודות ד"ר בנימין ריינשטיין:</b><ul><li><b>ד"ר ריינשטיין</b> בוגר תואר DMD מהפקולטה לרפואת שיניים של <b>האוניברסיטה העברית והדסה עין-כרם</b>.</li><li>בוגר השתלמויות בשיקום הפה, טיפולי שורש מורכבים ועקירות כירורגיות מהמחלקות השונות לרפואת שיניים ב<b>מרכז הרפואי שיבא</b>.</li><li>חבר בעמותה הישראלית להשתלות דנטליות.</li><li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על ניהול מרפאות צבאיות.</li></ul>`,
     servicesIntro: "המרפאה שלנו מתמחה בטיפולים הבאים:",
     services: [
       { t: "רפואת שיניים כללית", d: "בדיקות תקופתיות, ניקוי אבן וטיפולים משמרים." },
@@ -197,7 +197,7 @@ const content = {
     tabs: { about: "About the Clinic", services: "Services", emergency: "Emergency" },
     waMsg: "Hi, I would like to book an appointment.",
     aboutTitle: "About the Clinic",
-    aboutText: `At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere.<br><br><b>About Dr. Reinstein:</b><ul><li><b>Dr. Benjamin Reinstein</b> holds a DMD from the Hebrew University and Hadassah Ein Kerem.</li><li>Advanced training in oral rehabilitation and surgical extractions at Sheba Medical Center.</li><li>Member of the Israeli Association of Dental Implants.</li><li>Recipient of the IDF Medical Services Excellence Award.</li></ul>`,
+    aboutText: `At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere.<br><br><b>About Dr. Benjamin Reinstein:</b><ul><li><b>Dr. Reinstein</b> holds a DMD from the Hebrew University and Hadassah Ein Kerem.</li><li>Graduated from advanced training in oral rehabilitation, complex root canal therapy and surgical extractions in various dental departments at the <b>Sheba Medical Center</b>.</li><li>Member of the Israeli Association of Dental Implants.</li><li>Recipient of the IDF Medical Services Excellence Award.</li></ul>`,
     servicesIntro: "Our clinic specializes in the following treatments:",
     services: [
       { t: "General Dentistry", d: "Routine check-ups, cleaning, and conservative treatments." },
@@ -225,9 +225,9 @@ const content = {
     tabs: { about: "À Propos de la Clinique", services: "Services", emergency: "Urgences" },
     waMsg: "Bonjour, j'aimerais prendre rendez-vous.",
     aboutTitle: "À Propos",
-    aboutText: `Dans notre clinique, vous bénéficierez de soins dentaires de pointe.<br><br><b>À propos du Dr Reinstein :</b><ul><li><b>Le Dr Benjamin Reinstein</b> est diplômé DMD de l'Université hébraïque.</li><li>Formations spécialisées au centre médical Sheba.</li><li>Membre de l'Association israélienne des implants dentaires.</li><li>Lauréat du prix d'excellence des services médicaux de Tsahal.</li></ul>`,
+    aboutText: `Dans notre clinique, vous bénéficierez de soins dentaires de pointe.<br><br><b>À propos du Dr. Benjamin Reinstein :</b><ul><li><b>Le Dr. Reinstein</b> est diplômé DMD de <b>l'Université hébraïque de Jérusalem et de Hadassah Ein Kerem</b>.</li><li>Titulaire de formations spécialisées en réhabilitation orale, en traitements endodontiques complexes et en extractions chirurgicales dans les différents services de médecine dentaire du <b>centre médical Sheba</b>.</li><li>Membre de l'Association israélienne des implants dentaires.</li><li>Lauréat du prix d'excellence des services médicaux de Tsahal.</li></ul>`,
     servicesIntro: "Notre clinique se spécialise dans les soins suivants :",
-    services: [
+    services:
       { t: "Dentisterie Générale", d: "Examens de routine et soins conservateurs." },
       { t: "Dentisterie Esthétique", d: "Blanchiment et facettes." },
       { t: "Implants Dentaires", d: "Remplacement de dents par implants." },
