--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ const content = {
     tabs: { about: "About the Clinic", services: "Services", emergency: "Emergency" },
     waMsg: "Hi, I would like to book an appointment.",
     aboutTitle: "About the Clinic",
-    aboutText: `At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere.<br><br><b>About Dr. Benjamin Reinstein:</b><ul><li><b>Dr. Reinstein</b> holds a DMD from the Hebrew University and Hadassah Ein Kerem.</li><li>Graduated from advanced training in oral rehabilitation, complex root canal therapy and surgical extractions in various dental departments at the <b>Sheba Medical Center</b>.</li><li>Member of the Israeli Association of Dental Implants.</li><li>Recipient of the IDF Medical Services Excellence Award.</li></ul>`,
+    aboutText: `At our clinic, you will enjoy advanced dental treatments in a relaxed atmosphere.<br><br><b>About Dr. Benjamin Reinstein:</b><ul><li><b>Dr. Reinstein</b> holds a DMD from the <b>Hebrew University and Hadassah Ein Kerem<b/>.</li><li>Graduated from advanced training in oral rehabilitation, complex root canal therapy and surgical extractions in various dental departments at the <b>Sheba Medical Center</b>.</li><li>Member of the Israeli Association of Dental Implants.</li><li>Recipient of the IDF Medical Services Excellence Award.</li></ul>`,
     servicesIntro: "Our clinic specializes in the following treatments:",
     services: [
       { t: "General Dentistry", d: "Routine check-ups, cleaning, and conservative treatments." },
