Update URL in JSON-LD script in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     "addressCountry": "IL"
   },
   "telephone": "+972-53-385-2030",
-  "url": "https://yourwebsite.com"
+  "url": "https://www.dentalclinic.co.il/"
 }
 </script>
 
